--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxtjs/i18n": "^8.0.0",
     "nuxt": "^3.9.3",
     "vue": "^3.4.14",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
     "axios": "^1.6.5",
-    "vuex": "^4.0.2"
+    "vuex": "^4.1.0"
   }
 }
