--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -24,8 +24,7 @@ jobs:
     - name: Install & Generate 🔧
       run: |
         npm ci
-        npm install i18n
-        npm install vuex
+        npm built 
         npm run generate
       env:
         NUXT_APP_BASE_URL: ${{ vars.NUXT_APP_BASE_URL  }}
