--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
-    "bootstrap-rtl": "^3.3.4",
+    "@nuxtjs/i18n": "^8.0.0",
     "nuxi": "^3.10.0",
     "vuex": "^4.1.0"
   }
